openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nasa-api
  namespace: christina-v-huynh1-dev
spec:
  selector:
    app: nasa-api
  ports:
  - port: 8000
    targetPort: 8000
