openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nasa-api
  namespace: christina-v-huynh1-dev
spec:
  to:
    kind: Service
    name: nasa-api
  port:
    targetPort: 8000
  tls:
    termination: edge
